@@ -3145,7 +3145,7 @@ sub _disableReversePath
 
 sub _multigwRoutes
 {
-    my ($self) = @_;
+    my ($self, $dynIfaces) = @_;
 
     # Flush the rules
     #
@@ -3236,6 +3236,9 @@ sub _multigwRoutes
     push(@fcmds, '/sbin/iptables -t mangle -X');
     push(@fcmds, '/sbin/iptables -t mangle -A PREROUTING -j CONNMARK --restore-mark');
     push(@fcmds, '/sbin/iptables -t mangle -A OUTPUT -j CONNMARK --restore-mark');
+    if ($dynIfaces) {
+        sleep 1;
+    }
     EBox::Sudo::silentRoot(@fcmds);
 
     my $defaultRouterMark;
@@ -3448,13 +3451,18 @@ sub _enforceServiceState
 
     EBox::Sudo::silentRoot("ip addr add 127.0.1.1/8 dev lo");
 
+    my $dynIfaces = 0;
     my @ifups = ();
     my $iflist = $self->allIfacesWithRemoved();
     foreach my $iface (@{$iflist}) {
         my $dhcpIface = $self->ifaceMethod($iface) eq 'dhcp';
+        if ($dhcpIface) {
+            $dynIfaces = 1;
+        }
         if ($self->_hasChanged($iface) or $dhcpIface or $restart) {
             if ($self->ifaceMethod($iface) eq 'ppp') {
                 $iface = "zentyal-ppp-$iface";
+                $dynIfaces = 1;
             }
             push(@ifups, $iface);
         }
@@ -3494,7 +3502,7 @@ sub _enforceServiceState
 
     $self->_generateRoutes();
     $self->_disableReversePath();
-    $self->_multigwRoutes();
+    $self->_multigwRoutes($dynIfaces);
     $self->_cleanupVlanIfaces();
 
     EBox::Sudo::root('/sbin/ip route flush cache');
