@@ -1,4 +1,5 @@
 HEAD
+	+ Wait a bit in multigwRoutes to give time to dhcp/pppoe to register addresses
 	+ Don't generate resolvconf file until all interfaces are up
 	+ nameservers() method always return 127.0.0.1 if DNS module is
 	  installed and enabled
